--- a/cbp/src/Makefile.am
+++ b/cbp/src/Makefile.am
@@ -1,10 +1,10 @@
 ## Process this file with automake to produce Makefile.in
 
-lib_LIBRARIES = libexample.a
-libexample_a_SOURCES = example.c example.h
+lib_LIBRARIES = libmatrix.a
+libmatrix_a_SOURCES = matrix.c matrix.h
 
-bin_PROGRAMS = example
-example_SOURCES = example_main.c
-example_CFLAGS = -std=c99 -Wall -g3
-example_LDADD = libexample.a
+bin_PROGRAMS = matrix
+matrix_SOURCES = matrix_main.c
+matrix_CFLAGS = -std=c99 -Wall -g3
+matrix_LDADD = libmatrix.a
 
