copy tests good

--- a/cbp/tests/Makefile.am
+++ b/cbp/tests/Makefile.am
@@ -4,5 +4,5 @@ TESTS = tests_matrix
 check_PROGRAMS = tests_matrix
 tests_matrix_SOURCES = tests_main.c tests_matrix.c $(top_builddir)/src/matrix.h
 tests_matrix_CFLAGS = -Wall -g3 -std=c99 -I$(top_builddir)/src -I$(top_builddir)/tests
-tests_matrix_LDADD = $(top_builddir)/src/libmatrix.a
+tests_matrix_LDADD = $(top_builddir)/src/libmatrix.a -lm
 
