--- a/cbp/src/Makefile.am
+++ b/cbp/src/Makefile.am
@@ -6,5 +6,5 @@ libmatrix_a_SOURCES = matrix.c matrix.h
 bin_PROGRAMS = matrix
 matrix_SOURCES = matrix_main.c
 matrix_CFLAGS = -std=c99 -Wall -g3
-matrix_LDADD = libmatrix.a
+matrix_LDADD = libmatrix.a -lm
 
